[package]
name = "call-agent"
version = "1.0.2"
edition = "2021"
description = "A multimodal chat API library with tool support, OpenAI API compatible"
license = "MIT"
repository = "https://github.com/371tti/call-agent"
keywords = ["ai", "chat", "openai", "multimodal"]
categories = ["api-bindings", "asynchronous"]


[dependencies]
reqwest = { version = "0.12.12", features = ["json"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
