[package]
name = "call-agent"
version = "1.3.1"
edition = "2021"
description = "A multimodal chat API library with tool support, OpenAI API compatible"
license = "MIT"
repository = "https://github.com/371tti/call-agent"
keywords = ["ai", "chat", "openai", "multimodal"]
categories = ["api-bindings", "asynchronous"]


[dependencies]
reqwest = { version = "0.12.15", features = ["json"] }
tokio = { version = "1.44.2", features = ["macros", "rt-multi-thread"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
